# svetit

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Makefile  README.md  svetit.code-workspace
src/back/auth/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  Makefile.local  README.md  docker-compose.yml
src/back/auth/configs/: config_vars.yaml  config_vars_from_env.sh  config_vars_from_env.sh.in  config_vars_testing.yaml  create_session_key.sh  dynamic_config_fallback.json  run_with_env.sh.in  static_config.yaml  static_config.yaml.in
src/back/auth/db/: migrations.yml
src/back/auth/db/grants/: init.sql
src/back/auth/db/migrations/: V0001__Init.sql
src/back/auth/src/: main.cpp  oidc.cpp  oidc.hpp  repository.hpp  service.cpp  service.hpp  tokenizer.cpp  tokenizer.hpp
src/back/auth/src/api/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  helpers.cpp  helpers.hpp  login.cpp  login.hpp  login_callback.cpp  login_callback.hpp  logout.cpp  logout.hpp  logout_callback.cpp  logout_callback.hpp  token_introspect.cpp  token_introspect.hpp  token_refresh.cpp  token_refresh.hpp  user_byid.cpp  user_byid.hpp  user_info.cpp  user_info.hpp  user_list.cpp  user_list.hpp  user_logout.cpp  user_logout.hpp  user_token_refresh.cpp  user_token_refresh.hpp
src/back/auth/src/model/: consts.hpp  errors.hpp  model.hpp  oidctokens.hpp  oidctokens_serialize.cpp  oidctokens_serialize.hpp  session.hpp  session_refresh.hpp  session_refresh_serialize.cpp  session_refresh_serialize.hpp  session_serialize.cpp  session_serialize.hpp  userinfo.hpp  userinfo_serialize.cpp  userinfo_serialize.hpp
src/back/auth/src/repo/: repository.cpp  repository.hpp  state.cpp  state.hpp  table_session.cpp  table_session.hpp  table_state.cpp  table_state.hpp
src/back/auth/src/service/: oidc.cpp  oidc.hpp  service.cpp  service.hpp  session.cpp  session.hpp  tokenizer.cpp  tokenizer.hpp  tokens_internal.cpp  tokens_internal.hpp  tokens_oidc.cpp  tokens_oidc.hpp  tokens_session.cpp  tokens_session.hpp
src/back/auth/tests/: CMakeLists.txt  conftest.py  test_basic.py
src/back/nodes/: CMakeLists.txt  Makefile  README.md
src/back/nodes/configs/: config_vars_from_env.sh  static_config.yaml
src/back/nodes/db/app/: migrations.yml
src/back/nodes/src/: main.cpp
src/back/project/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  Makefile.local  README.md
src/back/project/configs/: config_vars_from_env.sh  static_config.yaml
src/back/project/db/: migrations.yml
src/back/project/db/grants/: init.sql
src/back/project/src/: main.cpp
src/back/project/src/api/: cc-di-list.cpp  cc-di.cpp  cc-di.hpp  cc-mode-type-list.cpp  cc-mode-type-list.hpp  cc-mode-type.cpp  cc-mode-type.hpp  cc-param-list.cpp  cc-param.cpp  cc-param.hpp  cc-status-category-list.cpp  cc-status-category.cpp  cc-status-category.hpp  cc-status-type-list.cpp  cc-status-type.cpp  cc-status-type.hpp  cc-type-di-type-list.cpp  cc-type-di-type.cpp  cc-type-di-type.hpp  cc-type-list.cpp  cc-type-param-list.cpp  cc-type-param.cpp  cc-type-param.hpp  cc-type.cpp  cc-type.hpp  code-list.cpp  code.cpp  code.hpp  control-circuit-list.cpp  control-circuit.cpp  control-circuit.hpp  details.cpp  device-item-list.cpp  device-item.cpp  device-item.hpp  device-list.cpp  device-plugin-param-list.cpp  device-plugin-param.cpp  device-plugin-param.hpp  device.cpp  (+41 more)
src/back/project/src/model/: cc_di.hpp  cc_di_serialize.cpp  cc_di_serialize.hpp  cc_mode_type.hpp  cc_mode_type_serialize.cpp  cc_mode_type_serialize.hpp  cc_param.hpp  cc_param_serialize.cpp  cc_param_serialize.hpp  cc_status_category.hpp  cc_status_category_serialize.cpp  cc_status_category_serialize.hpp  cc_status_type.hpp  cc_status_type_serialize.cpp  cc_status_type_serialize.hpp  cc_type.hpp  cc_type_di_type.hpp  cc_type_di_type_serialize.cpp  cc_type_di_type_serialize.hpp  cc_type_param.hpp  cc_type_param_serialize.cpp  cc_type_param_serialize.hpp  cc_type_serialize.cpp  cc_type_serialize.hpp  code.hpp  code_serialize.cpp  code_serialize.hpp  control_circuit.hpp  control_circuit_serialize.cpp  control_circuit_serialize.hpp  device.hpp  device_item.hpp  device_item_serialize.cpp  device_item_serialize.hpp  device_plugin_param.hpp  device_plugin_param_serialize.cpp  device_plugin_param_serialize.hpp  device_serialize.cpp  device_serialize.hpp  di_mode.cpp  (+44 more)
src/back/project/src/repo/: repository.cpp  repository.hpp  table_cc_di.cpp  table_cc_di.hpp  table_cc_mode_type.cpp  table_cc_mode_type.hpp  table_cc_param.cpp  table_cc_param.hpp  table_cc_status_category.cpp  table_cc_status_category.hpp  table_cc_status_type.cpp  table_cc_status_type.hpp  table_cc_type.cpp  (+39 more)
src/back/project/tests/: conftest.py  test_basic.py  test_cc_di.py  test_cc_di_list.py  test_cc_mode_type.py  test_cc_mode_type_list.py  test_cc_param.py  test_cc_param_list.py  test_cc_status_category.py  test_cc_status_category_list.py  test_cc_status_type.py  test_cc_status_type_list.py  test_cc_type.py  test_cc_type_di_type.py  test_cc_type_di_type_list.py  test_cc_type_list.py  test_cc_type_param.py  test_cc_type_param_list.py  test_code.py  test_code_list.py  test_control_circuit.py  test_control_circuit_list.py  test_details.py  test_device.py  test_device_item.py  test_device_item_list.py  test_device_list.py  test_device_plugin_param.py  test_device_plugin_param_list.py  test_di_plugin_param.py  test_di_plugin_param_list.py  test_di_type.py  test_di_type_list.py  test_measure.py  test_measure_list.py  test_param_type.py  test_param_type_list.py  test_plugin.py  test_plugin_list.py  test_project.py  (+13 more)
src/back/space/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  Makefile.local  README.md
src/back/space/configs/: config_vars.yaml.example  config_vars_from_env.sh  config_vars_from_env.sh.in  config_vars_testing.yaml.example  run_with_env.sh.in  static_config.yaml  static_config.yaml.in
src/back/space/src/: main.cpp
src/back/space/tests/: CMakeLists.txt  conftest.py  test_basic.py  test_create_space.py  test_get_invitations.py  test_patch_invitation.py  test_patch_user.py  test_post_invitation.py
(+1135 files in other folders)
